Fix 123324: Incorrect involume check on orthographic cameras